--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,13 @@
-Package: BuildABiocWorkshop2020
-Title: Bioconductor Workshop Template and Github Actions
-Version: 0.1.1
+Package: MicrobiomeOntology
+Title: A Microbiome Ontology
+Version: 0.0.1
 Authors@R: 
-    person(given = "Sean",
-           family = "Davis",
+    person(given = "Kelly",
+           family = "Eckenrode",
            role = c("aut", "cre"),
-           email = "seandavi@gmail.com",
-           comment = c(ORCID = "your-orc-id-here"))
-Description: This package serves as a template for using github actions to 
-    prepare a Bioconductor Workshop package for use. In particular,
-    a pkgdown website and docker image are generated based on workflow 
-    settings. 
+           email = "kelly.eckenrode@sph.cuny.edu",
+           comment = c(ORCID = https://orcid.org/0000-0002-0821-0112"))
+Description: Using the pkgdown workflow, this package contains the Microbiome Ontology (MO). MO is a set of standardized language to describe key biological characteristics, environmental conditions and experimental methods associated with microbiomes. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -22,7 +19,7 @@ Suggests:
     knitr,
     rmarkdown,
     pkgdown
-URL: https://seandavi.github.io/BuildABiocWorkshop2020/
-BugReports: https://github.com/seandavi/BuildABiocWorkshop2020/issues/new/choose
+URL: https://waldronlab.github.io/MicrobiomeOntology/
+BugReports: https://github.com/waldronlab/MicrobiomeOntology/issues/new/choose
 VignetteBuilder: knitr
 DockerImage: seandavi/buildabiocworkshop2020:latest
